# webservice_teacher

./: .env  .gitignore  Cargo.toml
wasm-client/: Cargo.toml  LICENSE_MIT
wasm-client/src/: lib.rs
wasm-client/www/: bootstrap.js  index.html  index.js  package-lock.json  package.json  webpack.config.js
wasm-client/www/public/: index.html  index.js
webapp/: Cargo.toml
webapp/src/: errors.rs  handlers.rs  mod.rs  models.rs  routers.rs
webapp/static/: register.html  teachers.html
webservice/: Cargo.toml
webservice/src/: error.rs  routers.rs  state.rs
webservice/src/dbaccess/: course.rs  mod.rs  teacher.rs
webservice/src/handlers/: course.rs  general.rs  mod.rs  teacher.rs
webservice/src/models/: course.rs  teacher.rs
