[package]
name = "webservice"
version = "0.1.0"
edition = "2021"
default-run="teacher-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors="0.6.0"
actix-web="4.0.0"
actix-rt="2.6.0"
serde={version="1.0.132",features=["derive"]}
chrono={version="0.4.19",features=["serde"]}
dotenv="0.15.0"
sqlx={version="0.6.3",default_features=false,features=[
    "mysql",
    "runtime-tokio-rustls",
    "macros",
    "chrono"
]}

[[bin]]
name="teacher-service"